# testing

./: .gitignore  README.md  index.json  pyproject.toml
.egg-state/agent-outputs/: pipeline-46909421-coder-output.json
.egg-state/brc-history/: pipeline-d590f33b-implement.json  pipeline-d590f33b-implement.md
.egg-state/contracts/: .egg-readonly  10.json  pipeline-01f86b7e.json  pipeline-07a14c69.json  pipeline-0e5666ed.json  pipeline-1571db00.json  pipeline-25e8614c.json  pipeline-355f08a3.json  pipeline-35bd3a98.json  pipeline-46909421.json  pipeline-4b096ac1.json  pipeline-4ba47596.json  pipeline-4e0b25a9.json  pipeline-4f4210e7.json  pipeline-4f9a6a09.json  pipeline-573a32d5.json  pipeline-72183220.json  pipeline-7473562e.json  pipeline-7a244c58.json  pipeline-9987d5ed.json  pipeline-d590f33b.json  pipeline-d6a39c82.json  pipeline-d7c98a59.json  pipeline-d9ac3268.json  pipeline-e4595142.json  pipeline-e462c3fe.json  pipeline-f9b36466.json  pipeline-fcfbee67.json  pipeline-fff606ac.json
.egg-state/drafts/: .egg-readonly  10-analysis.md  10-plan.md  pipeline-1571db00-analysis.md  pipeline-1571db00-plan.md  pipeline-25e8614c-analysis.md  pipeline-25e8614c-plan.md  pipeline-35bd3a98-analysis.md  pipeline-35bd3a98-plan.md  (+12 more)
docs/: challenges.md  index.md  task_queue.md
tests/: test_hello.py  test_inmemory_db.py  test_inmemory_db_gaps.py  test_kv_store.py  test_lru_cache.py  test_merge_intervals.py  test_merge_intervals_extended.py  test_merge_intervals_gaps.py  test_microgpt.py  test_nosql_aggregation.py  test_nosql_crud.py  test_nosql_db.py  test_nosql_index.py  test_nosql_query.py  test_nosql_transaction.py  test_sliding_window_max.py  test_sliding_window_max_gaps.py
(+102 files in other folders)
